--- a/server/templates/account-reset-pwd.html
+++ b/server/templates/account-reset-pwd.html
@@ -1,17 +1,11 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
-
 <head>
-    <meta charset="utf-8">
-    <!-- utf-8 works for most cases -->
-    <meta name="viewport" content="width=device-width">
-    <!-- Forcing initial-scale shouldn't be necessary -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <!-- Use the latest (edge) version of IE rendering engine -->
-    <meta name="x-apple-disable-message-reformatting">
-    <!-- Disable auto-scale in iOS 10 Mail entirely -->
-    <title></title>
-    <!-- The title tag shows in email notifications, like Android 4.4. -->
+    <meta charset="utf-8"> <!-- utf-8 works for most cases -->
+    <meta name="viewport" content="width=device-width"> <!-- Forcing initial-scale shouldn't be necessary -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Use the latest (edge) version of IE rendering engine -->
+    <meta name="x-apple-disable-message-reformatting">  <!-- Disable auto-scale in iOS 10 Mail entirely -->
+    <title></title> <!-- The title tag shows in email notifications, like Android 4.4. -->
 
     <!-- Web Font / @font-face : BEGIN -->
     <!-- NOTE: If web fonts are not required, lines 10 - 27 can be safely removed. -->
@@ -34,9 +28,9 @@
 
     <!-- CSS Reset : BEGIN -->
     <style>
+
         /* What it does: Remove spaces around the email design added by some email clients. */
         /* Beware: It can remove the padding / margin and add a background color to the compose a reply window. */
-
         html,
         body {
             margin: 0 auto !important;
@@ -44,51 +38,48 @@
             height: 100% !important;
             width: 100% !important;
         }
-        /* What it does: Stops email clients resizing small text. */
 
+        /* What it does: Stops email clients resizing small text. */
         * {
             -ms-text-size-adjust: 100%;
             -webkit-text-size-adjust: 100%;
         }
-        /* What it does: Centers email on Android 4.4 */
 
+        /* What it does: Centers email on Android 4.4 */
         div[style*="margin: 16px 0"] {
             margin: 0 !important;
         }
-        /* What it does: Stops Outlook from adding extra spacing to tables. */
 
+        /* What it does: Stops Outlook from adding extra spacing to tables. */
         table,
         td {
             mso-table-lspace: 0pt !important;
             mso-table-rspace: 0pt !important;
         }
-        /* What it does: Fixes webkit padding issue. Fix for Yahoo mail table alignment bug. Applies table-layout to the first 2 tables then removes for anything nested deeper. */
 
+        /* What it does: Fixes webkit padding issue. Fix for Yahoo mail table alignment bug. Applies table-layout to the first 2 tables then removes for anything nested deeper. */
         table {
             border-spacing: 0 !important;
             border-collapse: collapse !important;
             table-layout: fixed !important;
             margin: 0 auto !important;
         }
-
         table table table {
             table-layout: auto;
         }
+
         /* What it does: Uses a better rendering method when resizing images in IE. */
-
         img {
-            -ms-interpolation-mode: bicubic;
+            -ms-interpolation-mode:bicubic;
         }
-        /* What it does: Prevents Windows 10 Mail from underlining links despite inline CSS. Styles for underlined links should be inline. */
 
+        /* What it does: Prevents Windows 10 Mail from underlining links despite inline CSS. Styles for underlined links should be inline. */
         a {
             text-decoration: none;
         }
+
         /* What it does: A work-around for email clients meddling in triggered links. */
-
-        *[x-apple-data-detectors],
-        /* iOS */
-
+        *[x-apple-data-detectors],  /* iOS */
         .unstyle-auto-detected-links *,
         .aBn {
             border-bottom: 0 !important;
@@ -100,49 +91,49 @@
             font-weight: inherit !important;
             line-height: inherit !important;
         }
-        /* What it does: Prevents Gmail from displaying a download button on large, non-linked images. */
 
+        /* What it does: Prevents Gmail from displaying a download button on large, non-linked images. */
         .a6S {
             display: none !important;
             opacity: 0.01 !important;
         }
-        /* What it does: Prevents Gmail from changing the text color in conversation threads. */
 
+        /* What it does: Prevents Gmail from changing the text color in conversation threads. */
         .im {
             color: inherit !important;
         }
-        /* If the above doesn't work, add a .g-img class to any image in question. */
 
-        img.g-img+div {
+        /* If the above doesn't work, add a .g-img class to any image in question. */
+        img.g-img + div {
             display: none !important;
         }
+
         /* What it does: Removes right gutter in Gmail iOS app: https://github.com/TedGoas/Cerberus/issues/89  */
         /* Create one of these media queries for each additional viewport size you'd like to fix */
-        /* iPhone 4, 4S, 5, 5S, 5C, and 5SE */
 
+        /* iPhone 4, 4S, 5, 5S, 5C, and 5SE */
         @media only screen and (min-device-width: 320px) and (max-device-width: 374px) {
-            u~div .email-container {
+            u ~ div .email-container {
                 min-width: 320px !important;
             }
         }
         /* iPhone 6, 6S, 7, 8, and X */
-
         @media only screen and (min-device-width: 375px) and (max-device-width: 413px) {
-            u~div .email-container {
+            u ~ div .email-container {
                 min-width: 375px !important;
             }
         }
         /* iPhone 6+, 7+, and 8+ */
-
         @media only screen and (min-device-width: 414px) {
-            u~div .email-container {
+            u ~ div .email-container {
                 min-width: 414px !important;
             }
         }
+
     </style>
     <!-- CSS Reset : END -->
-    <!-- Reset list spacing because Outlook ignores much of our inline CSS. -->
-    <!--[if mso]>
+	<!-- Reset list spacing because Outlook ignores much of our inline CSS. -->
+	<!--[if mso]>
 	<style type="text/css">
 		ul,
 		ol {
@@ -162,41 +153,28 @@
 
     <!-- Progressive Enhancements : BEGIN -->
     <style>
-        /* What it does: Hover styles for buttons */
 
-        .button-td,
-        .button-a {
-            transition: all 100ms ease-in;
-        }
+	    /* What it does: Hover styles for buttons */
+	    .button-td,
+	    .button-a {
+	        transition: all 100ms ease-in;
+	    }
+	    .button-td-primary:hover,
+	    .button-a-primary:hover {
+	        background: #1976d2 !important;
+	        border-color: #1976d2 !important;
+	    }
 
-        .button-td-primary:hover,
-        .button-a-primary:hover {
-            background: #004f9b !important;
-            border-color: #004f9b !important;
-        }
-        /* Media Queries */
+	    /* Media Queries */
+	    @media screen and (max-width: 600px) {
 
-        @media screen and (max-width: 600px) {
-            /* What it does: Adjust typography on small screens to improve readability */
-            .email-container p {
-                font-size: 17px !important;
-            }
-        }
+	        /* What it does: Adjust typography on small screens to improve readability */
+	        .email-container p {
+	            font-size: 17px !important;
+	        }
 
-        .td-cus-header {
-            padding: 20px 20px 10px 20px;
-            font-family: sans-serif;
-            font-size: 15px;
-            line-height: 20px;
-            color: #555555;
-        }
+	    }
 
-        .td-cus {
-            font-family: sans-serif;
-            font-size: 15px;
-            line-height: 20px;
-            color: #555555;
-        }
     </style>
     <!-- Progressive Enhancements : END -->
 
@@ -217,10 +195,9 @@
 	2. center tag: for Gmail and Inbox mobile apps and web versions of Gmail, GSuite, Inbox, Yahoo, AOL, Libero, Comcast, freenet, Mail.ru, Orange.fr
 	3. mso conditional: For Windows 10 Mail
 -->
-
 <body width="100%" style="margin: 0; padding: 0 !important; mso-line-height-rule: exactly; background-color: #EEE;">
-    <center style="width: 100%; background-color: #EEE;">
-        <!--[if mso | IE]>
+	<center style="width: 100%; background-color: #EEE;">
+    <!--[if mso | IE]>
     <table role="presentation" border="0" cellpadding="0" cellspacing="0" width="100%" style="background-color: #222222;">
     <tr>
     <td>
@@ -228,14 +205,14 @@
 
         <!-- Visually Hidden Preheader Text : BEGIN -->
         <div style="display: none; font-size: 1px; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
-            <%= preheadertext %>
+          <%= preheadertext %>
         </div>
         <!-- Visually Hidden Preheader Text : END -->
 
         <!-- Create white space after the desired preview text so email clients don’t pull other distracting text into the inbox preview. Extend as necessary. -->
         <!-- Preview Text Spacing Hack : BEGIN -->
         <div style="display: none; font-size: 1px; line-height: 1px; max-height: 0px; max-width: 0px; opacity: 0; overflow: hidden; mso-hide: all; font-family: sans-serif;">
-            &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
+	        &zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;&zwnj;&nbsp;
         </div>
         <!-- Preview Text Spacing Hack : END -->
 
@@ -244,74 +221,52 @@
             1. max-width for all clients except Desktop Windows Outlook, allowing the email to squish on narrow but never go wider than 600px.
             2. MSO tags for Desktop Windows Outlook enforce a 600px width.
         -->
-        <div style="max-width: 660px; margin: 0 auto;" class="email-container">
-            <!-- Email Body : BEGIN -->
-            <table style="margin: 50px 0px 0px 0px; " role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: 0 auto;">
+        <div style="max-width: 600px; margin: 0 auto;" class="email-container">
+            <!--[if mso]>
+            <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="600">
+            <tr>
+            <td>
+            <![endif]-->
+
+	        <!-- Email Body : BEGIN -->
+	        <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: 0 auto;">
+		        <!-- Email Header : BEGIN -->
+	            <tr>
+	                <td style="padding: 20px 0; text-align: center">
+	                    <img src="<%= logo %>" height="50" alt="<%= siteTitle %>" border="0" style="width: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555;">
+	                </td>
+	            </tr>
+		        <!-- Email Header : END -->
+
+                <!-- Hero Image, Flush : BEGIN -->
+                <tr>
+                    <td style="background-color: #ffffff;">
+                        <img src="https://static.requarks.io/email/email-cover-book.jpg" width="600" height="" alt="<%= title %>" border="0" style="width: 100%; max-width: 600px; height: auto; background: #dddddd; font-family: sans-serif; font-size: 15px; line-height: 15px; color: #555555; margin: auto;" class="g-img">
+                    </td>
+                </tr>
+                <!-- Hero Image, Flush : END -->
+
+                <!-- 1 Column Text + Button : BEGIN -->
                 <tr>
                     <td style="background-color: #ffffff;">
                         <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
                             <tr>
-                                <td class="td-cus-header">
-
-                                    <h3 style="margin: 0px 0px 0px 0px; font-family: sans-serif; line-height: 30px; color: #333333; font-weight: normal;">
-                                        Hi <%= user %>,
-                                    </h3>
+                                <td style="padding: 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
+                                    <h1 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 25px; line-height: 30px; color: #333333; font-weight: normal;"><%= title %></h1>
+                                    <p style="margin: 0;"><%= content %></p>
                                 </td>
                             </tr>
                             <tr>
-                                <td class="td-cus" style="padding: 0px 20px;">
-                                    <!-- <h1 style="margin: 0 0 10px 0; font-family: sans-serif; font-size: 25px; line-height: 30px; color: #333333; font-weight: normal;">
-                                        You have received this email because a password reset request for your account was received.
-                                    </h1> -->
-                                    <p style="margin: 10px 10px 10px 0px;">
-                                        <%= title %>
-                                    </p>
-                                    <p style="margin: 0px 0px 0px 0px;">
-                                      <%= content %>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="padding: 20px 20px;">
+                                <td style="padding: 0 20px 20px 20px;">
                                     <!-- Button : BEGIN -->
-                                    <table align="left" role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin: auto;">
+                                    <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin: auto;">
                                         <tr>
-                                            <td class="button-td button-td-primary" style="border-radius: 4px; background: #004f9b;">
-                                                <a class="button-a button-a-primary" href="<%= buttonLink %>" style="background: #004f9b; border: 1px solid #004f9b; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; color: #ffffff; display: block; border-radius: 4px;">
-                                                    <%= buttonText %>
-                                                </a>
+                                            <td class="button-td button-td-primary" style="border-radius: 4px; background: #1976d2;">
+                                                <a class="button-a button-a-primary" href="<%= buttonLink %>" style="background: #1976d2; border: 1px solid #1976d2; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; color: #ffffff; display: block; border-radius: 4px;"><%= buttonText %></a>
                                             </td>
                                         </tr>
                                     </table>
                                     <!-- Button : END -->
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="padding: 0px 20px 0px 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;font-weight: bold;">
-                                    <p style="margin: 0px 0px 0px 0px;">
-                                        <%= footertext %>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td style="padding: 0px 20px 20px 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
-                                    <p style="margin: 0px 0px 0px 0px;">
-                                        <%= footercontent %>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="td-cus" style="padding: 0px 20px;">
-                                    <p style="margin: 0;">
-                                        <%= regards %>
-                                    </p>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td class="td-cus" style="padding: 0px 20px 20px 20px;">
-                                    <p style="margin: 0;">
-                                        <%= regardsfrom %>
-                                    </p>
                                 </td>
                             </tr>
                         </table>
@@ -323,7 +278,7 @@
             <!-- Email Body : END -->
 
             <!-- Email Footer : BEGIN -->
-            <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: 0 auto;">
+	        <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="margin: 0 auto;">
                 <tr>
                     <td style="padding: 20px; font-family: sans-serif; font-size: 12px; line-height: 15px; text-align: center; color: #888888;">
                         <%= copyright %>
@@ -339,12 +294,11 @@
             <![endif]-->
         </div>
 
-        <!--[if mso | IE]>
+    <!--[if mso | IE]>
     </td>
     </tr>
     </table>
     <![endif]-->
     </center>
 </body>
-
 </html>
